--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "chart.js": "2.7.3",
     "core-js": "2.5.7",
     "font-awesome": "4.7.0",
+    "inputmask": "^4.0.6",
     "ng2-charts": "1.6.0",
     "rxjs": "6.3.3",
     "yarn": "1.12.1",
